--- a/aws/cloudformation/cloud_formation_adhoc_standalone.yml.erb
+++ b/aws/cloudformation/cloud_formation_adhoc_standalone.yml.erb
@@ -24,12 +24,6 @@ unless dry_run
   update_bootstrap_script.call
 end
 
-# Branch off existing AMI for adhoc.
-# This allows us to spin up standalone servers for other environments
-# without bringing over certain baked-in adhoc-specific characteristics
-# from an adhoc image (like the repo root folder name)
-image_id = rack_env?(:adhoc) ? adhoc_image_id : IMAGE_ID
-
 iam_instance_profile = stack_name == 'staging-next' ? 'StagingInstanceProfile' : 'StandaloneFrontendInstanceProfile'
 -%>
 ---
@@ -44,7 +38,7 @@ Parameters:
     Default: <%=branch%>
   ImageId:
     Type: String
-    Default: <%=image_id%>
+    Default: <%=IMAGE_ID%>
 Resources:
   WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
