--- a/aws/cloudformation/cloud_formation_stack.yml.erb
+++ b/aws/cloudformation/cloud_formation_stack.yml.erb
@@ -14,8 +14,10 @@ unless dry_run
   update_bootstrap_script.call
 end
 
-frontends = %i(production adhoc).include?(rack_env)
-@frontends = frontends
+frontends = @frontends = rack_env?(:production) || ENV['FRONTENDS']
+database = @database = ENV['DATABASE']
+load_balancer = @load_balancer = !rack_env?(:adhoc)
+
 require 'cdo/cron'
 
 self.log_resource_filter.push %w(FrontendLaunchConfig ASGCount)
@@ -39,7 +41,7 @@ Parameters:
   Branch:
     Type: String
     Default: <%=branch%>
-<% if environment == :adhoc -%>
+<% if database -%>
   DatabaseUsername:
     Type: String
     Default: master
@@ -99,6 +101,7 @@ Resources:
     LaunchConfiguration: {Ref: 'FrontendLaunchConfig'}
   %>
 <% end -%>
+<% if load_balancer -%>
   # TODO hourofcode.com and csedweek.org load balancers should be added to this template.
   LoadBalancer:
     Type: AWS::ElasticLoadBalancing::LoadBalancer
@@ -129,8 +132,9 @@ Resources:
       ConnectionDrainingPolicy:
         Enabled: true
         Timeout: 300
-<% if !frontends && daemon -%>
+<%   if !frontends && daemon -%>
       Instances: [!Ref Daemon]
+<%   end -%>
 <% end -%>
 
 <% if frontends -%>
@@ -360,13 +364,17 @@ Resources:
       RecordSets:
         - Name: <%=app_domain%>
           Type: A
-          AliasTarget:
 <%   if cdn_enabled -%>
+          AliasTarget:
             DNSName: !GetAtt [<%=app%>CDN, DomainName]
             HostedZoneId: Z2FDTNDATAQYW2 # static ID for cloudfront aliases
-<%   else -%>
+<%   elsif load_balancer -%>
+          AliasTarget:
             DNSName: !GetAtt [LoadBalancer, CanonicalHostedZoneName]
             HostedZoneId: !GetAtt [LoadBalancer, CanonicalHostedZoneNameID]
+<%   else -%>
+          TTL: 60
+          ResourceRecords: [!GetAtt Daemon.PublicIp]
 <%   end -%>
 <%   if cdn_enabled -%>
   <%=app%>CDN:
@@ -396,9 +404,14 @@ Resources:
       RecordSets:
         - Name: "<%=subdomain('origin')%>"
           Type: A
+<%   if load_balancer -%>
           AliasTarget:
             HostedZoneId: !GetAtt [LoadBalancer, CanonicalHostedZoneNameID]
             DNSName: !GetAtt [LoadBalancer, CanonicalHostedZoneName]
+<%   else -%>
+          TTL: 60
+          ResourceRecords: [!GetAtt Daemon.PublicIp]
+<%   end -%>
 <% end -%>
 <% if frontends -%>
 <%   cache_node_type = rack_env?(:production) ? 'cache.r3.large' : 'cache.t2.micro' -%>
@@ -465,7 +478,7 @@ Resources:
     Properties:
       ImageId: <%=IMAGE_ID%>
       InstanceType: !Ref InstanceType
-      IamInstanceProfile: !ImportValue IAM-<%=environment == :adhoc ? 'Frontend' : 'Staging'%>InstanceProfile
+      IamInstanceProfile: !ImportValue IAM-<%=environment == :adhoc ? 'Standalone' : 'Staging'%>InstanceProfile
       KeyName: <%=SSH_KEY_NAME%>
       Tags:
       - Key: Name
@@ -494,7 +507,7 @@ Resources:
           - !ImportValue VPC-FrontendSecurityGroup
           - !ImportValue VPC-GatewaySecurityGroup
 <%end-%>
-<% if environment == :adhoc -%>
+<% if database -%>
   Database:
     Type: AWS::RDS::DBInstance
     Properties:
