--- a/aws/cloudformation/bootstrap_chef_stack.sh.erb
+++ b/aws/cloudformation/bootstrap_chef_stack.sh.erb
@@ -73,7 +73,7 @@ cat <<JSON > $FIRST_BOOT
 <% end -%>
 <% if rack_env?(:adhoc) -%>
     "image_optim": false,
-    "override_dashboard": "dashboard-<%=subdomain%>",
+    "override_dashboard": "<%=studio_subdomain%>",
     "override_pegasus": "<%=subdomain%>",
 <% end -%>
     "stack_name": "$STACK"
